--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="bg-jx"></div>
 			<div class="footer">
 				<p>All content copyright NiZ-YoYo © 2014 • All rights reserved.</p>
-				<p>Proudly published with <a target="_blank" href="http://cv.qiaobutang.com">&nbsp;乔布简历</a></p>
+				<p>Proudly published with <a target="_blank" href="https://github.com/barbara012">&nbsp;GitHub</a></p>
 			</div>
 		</div>
 		<div class="track-matte"></div>
