--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	    <meta charset="UTF-8">
 	    <title>Ni-Z-YoYo</title>
+	    <link rel="shortcut icon" href="images/favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/yoyo.css">
 		<script src="js/jquery-2.0.3.min.js"></script>
 		<script src="js/jquery.easing.1.3.js"></script>
