--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="footer">
 				<p>All content copyright NiZ-YoYo © 2014 • All rights reserved.</p>
 				<p>Proudly published with <a target="_blank" href="https://github.com/barbara012">&nbsp;GitHub</a></p>
-				<P>友情链接：<a href="http://cv.qiaobutang.com">乔布简历</a></P>
+				<P>友情链接：<a target="_blank" href="http://cv.qiaobutang.com">乔布简历</a></P>
 			</div>
 		</div>
 		<div class="track-matte"></div>
