--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 			<div class="head">
 				<div class="w-96">
 					<h1>NI·Z<span>&</span>YOYO</h1>
-					<p>Sentimental girl<span>&</span>Cute Teddy</p>
+					<p>Sentimental girl<span>&</span>Cute Teddy<span class="float-right">陌上花开，可缓缓归矣！</span></p>
+
 				</div>
 			</div>
 			<div class="main">
