--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 	<body>
 		<div class="body">
 			<div class="head">
-				<div class="w-96">
+				<div class="w-96 en">
 					<h1>NI·Z<span>&</span>YOYO</h1>
 					<p>Sentimental girl<span>&</span>Cute Teddy<span class="float-right">陌上花开，可缓缓归矣！</span></p>
-
+					<ul class="head_nav clear-fix">						
+						<li><a href="article/article.html" class="nav_a">Article</a></li>
+						<li><a href="#" class="nav_a selected icon">YoYo</a></li>
+					</ul>
 				</div>
 			</div>
 			<div class="main">
@@ -67,7 +70,7 @@
 				</div>
 			</div>
 			<div class="bg-jx"></div>
-			<div class="footer">
+			<div class="footer en">
 				<p>All content copyright NiZ-YoYo © 2014 • All rights reserved.</p>
 				<p>Proudly published with <a target="_blank" href="https://github.com/barbara012">&nbsp;GitHub</a></p>
 				<P>友情链接：<a target="_blank" href="http://cv.qiaobutang.com">乔布简历</a></P>
