--- a/article/article.html
+++ b/article/article.html
@@ -20,7 +20,7 @@
 			</div>
 			<div class="main">
 				<article class="w-96">
-					<h2>时间都去哪了？</h2>
+					<h2>时间都去哪了</h2>
 					<p>门前老树长新芽</p>
 					<p>院里枯木又开花</p>
 					<p>半生存了好多话</p>
