--- a/article/article.html
+++ b/article/article.html
@@ -50,14 +50,15 @@
 					<p>柴米油盐半辈子</p>
 					<p>转眼就只剩下满脸的皱纹了</p>
 				</article>
+				<div class="letter"></div>
 				<div class="audio w-96">
 					<audio class="mp3" controls="controls" autoplay="autoplay">
 						<source src="../audio/sjdqnl.mp3" type="audio/mp3">
 						Your browser does not support the audio element.						
 					</audio>
 				</div>
-			</div>
-			<div class="bg-jx"></div>
+				<div class="bg-jx"></div>
+			</div>			
 			<div class="footer en">
 				<p>All content copyright NiZ-YoYo © 2014 • All rights reserved.</p>
 				<p>Proudly published with <a target="_blank" href="https://github.com/barbara012">&nbsp;GitHub</a></p>
