--- a/article/article.html
+++ b/article/article.html
@@ -19,6 +19,7 @@
 				</div>
 			</div>
 			<div class="main">
+				<a href="javascript:;" class="update-article">更新文章</a>
 				<article class="w-96">
 					<div class="article">
 						<div class="border-top"></div>
@@ -54,15 +55,14 @@
 							<p>转眼就只剩下满脸的皱纹了</p>
 						</div>	
 					</div>
-					<div class="letter"></div>				
+					<div class="letter"></div>
+					<div class="audio">
+						<audio class="mp3" controls="controls" >
+							<source src="../audio/sjdqnl.mp3" type="audio/mp3">
+							你的浏览器不支持音频元素（audio）标签
+						</audio>
+					</div>
 				</article>
-				
-				<div class="audio w-96">
-					<audio class="mp3" controls="controls" autoplay="autoplay">
-						<source src="../audio/sjdqnl.mp3" type="audio/mp3">
-						Your browser does not support the audio element.						
-					</audio>
-				</div>
 				<div class="bg-jx"></div>
 			</div>			
 			<div class="footer en">
@@ -73,6 +73,7 @@
 		</div>
 		<div class="track-matte"></div>
 		<div class="canvs"></div>
-		<script src="js/jquery-2.0.3.min.js"></script>
+		<script src="../js/jquery-2.0.3.min.js"></script>
+		<script src="../js/article.js"></script>
 	</body>
 </html>
