--- a/article/article.html
+++ b/article/article.html
@@ -19,49 +19,19 @@
 				</div>
 			</div>
 			<div class="main">
-				<a href="javascript:;" class="update-article">更新文章</a>
+				<ul class="article-nav">
+					<li><a href="javascript:;" class="update-article selected" data-txt="../article/time.txt" data-music="../audio/sjdqnl.mp3">时间都去哪了</a></li>
+					<li><a href="javascript:;" class="update-article" data-txt="../article/child.txt" data-music="../audio/child.mp3">亲爱的小孩</a></li>
+				</ul>
 				<article class="w-96">
 					<div class="article">
 						<div class="border-top"></div>
 						<div class="content">
-							<h2>时间都去哪了</h2>
-							<p>门前老树长新芽</p>
-							<p>院里枯木又开花</p>
-							<p>半生存了好多话</p>
-							<p>藏进了满头白发</p>
-							<p>记忆中的小脚丫</p>
-							<p>肉嘟嘟的小嘴巴</p>
-							<p>一生把爱交给他</p>
-							<p>只为那一声爸妈</p>
-							<p>时间都去哪儿了</p>
-							<p>还没好好感受年轻就老了</p>
-							<p>生儿养女一辈子</p>
-							<p>满脑子都是孩子哭了笑了</p>
-							<p>时间都去哪儿了</p>
-							<p>还没好好看看你眼睛就花了</p>
-							<p>柴米油盐半辈子</p>
-							<p>转眼就只剩下满脸的皱纹了</p>
-							<p>记忆中的小脚丫</p>
-							<p>肉嘟嘟的小嘴巴</p>
-							<p>一生把爱交给他</p>
-							<p>只为那一声爸妈</p>
-							<p>时间都去哪儿了</p>
-							<p>还没好好感受年轻就老了</p>
-							<p>生儿养女一辈子</p>
-							<p>满脑子都是孩子哭了笑了</p>
-							<p>时间都去哪儿了</p>
-							<p>还没好好看看你眼睛就花了</p>
-							<p>柴米油盐半辈子</p>
-							<p>转眼就只剩下满脸的皱纹了</p>
+							<img src="../images/5.gif" class="article-load">						
 						</div>	
 					</div>
 					<div class="letter"></div>
-					<div class="audio">
-						<audio class="mp3" controls="controls" >
-							<source src="../audio/sjdqnl.mp3" type="audio/mp3">
-							你的浏览器不支持音频元素（audio）标签
-						</audio>
-					</div>
+					<div class="audio"></div>
 				</article>
 				<div class="bg-jx"></div>
 			</div>			
