--- a/article/article.html
+++ b/article/article.html
@@ -20,8 +20,10 @@
 			</div>
 			<div class="main">
 				<ul class="article-nav">
-					<li><a href="javascript:;" class="update-article selected" data-txt="../article/time.txt" data-music="../audio/sjdqnl.mp3">时间都去哪了</a></li>
+					<li><a href="javascript:;" class="update-article selected" data-txt="../article/gto.txt" data-music="../audio/gto.mp3">Last Piece</a></li>
+					<li><a href="javascript:;" class="update-article" data-txt="../article/time.txt" data-music="../audio/sjdqnl.mp3">时间都去哪了</a></li>
 					<li><a href="javascript:;" class="update-article" data-txt="../article/child.txt" data-music="../audio/child.mp3">亲爱的小孩</a></li>
+					<li><a href="javascript:;" class="update-article" data-txt="../article/foryou.txt" data-music="../audio/for you.mp3">Everything I Do I Do It For You</a></li>
 				</ul>
 				<article class="w-96">
 					<div class="article">
