--- a/article/article.html
+++ b/article/article.html
@@ -33,7 +33,9 @@
 						</div>	
 					</div>
 					<div class="letter"></div>
-					<div class="audio"></div>
+					<div class="audio">
+						<span class="before"></span>
+					</div>
 				</article>
 				<div class="bg-jx"></div>
 			</div>			
