--- a/article/article.html
+++ b/article/article.html
@@ -27,7 +27,7 @@
 				</ul>
 				<article class="w-96">
 					<div class="article">
-						<div class="border-top"></div>
+						<div class="border-top article-title"></div>
 						<div class="content">
 							<img src="../images/5.gif" class="article-load">						
 						</div>	
