--- a/article/article.html
+++ b/article/article.html
@@ -42,7 +42,8 @@
 			<div class="footer en">
 				<p>All content copyright NiZ-YoYo © 2014 • All rights reserved.</p>
 				<p>Proudly published with <a target="_blank" href="https://github.com/barbara012">&nbsp;GitHub</a></p>
-				<P>友情链接：<a target="_blank" href="http://cv.qiaobutang.com">乔布简历</a></P>
+				<p>友情链接：<a target="_blank" href="http://cv.qiaobutang.com">乔布简历</a></p>
+				<p>请使用现代浏览器，下载：<a href="http://download.firefox.com.cn/releases/partners/qiaobutang/webins3.0/zh-CN/Firefox-setup.exe">火狐浏览器</a></p>
 			</div>
 		</div>
 		<div class="track-matte"></div>
