--- a/article/article.html
+++ b/article/article.html
@@ -24,6 +24,7 @@
 					<li><a href="javascript:;" class="update-article" data-txt="../article/time.txt" data-music="../audio/sjdqnl.mp3">时间都去哪了</a></li>
 					<li><a href="javascript:;" class="update-article" data-txt="../article/child.txt" data-music="../audio/child.mp3">亲爱的小孩</a></li>
 					<li><a href="javascript:;" class="update-article" data-txt="../article/foryou.txt" data-music="../audio/for you.mp3">Everything I Do I Do It For You</a></li>
+					<li><a href="javascript:;" class="update-article" data-txt="../article/yhyl.txt" data-music="../audio/yhyl.mp3">烟花易冷</a></li>
 				</ul>
 				<article class="w-96">
 					<div class="article">
