--- a/article/article.html
+++ b/article/article.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/yoyo.css">
 	</head>
 	<body>
-		<img src="images/5.gif" alt="" style="display: none">
+		<img src="../images/5.gif" alt="" style="display: none">
 		<div class="body">
 			<div class="head">
 				<div class="w-96 en">
