--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>		
 		<div class="body">
+			<img src="images/3.gif" alt="" style="display: none">
 			<div class="head">
 				<div class="w-96 en">
 					<h1>NI·Z<span>&</span>YOYO</h1>
