--- a/article/article.html
+++ b/article/article.html
@@ -14,7 +14,7 @@
 					<h1>NI·Z<span>&</span>YOYO</h1>
 					<p>Sentimental girl<span>&</span>Cute Teddy<span class="float-right">陌上花开，可缓缓归矣！</span></p>
 					<ul class="head_nav clear-fix">						
-						<li><a href="article/article.html" class="nav_a selected">Article</a></li>
+						<li><a href="article/article.html" class="nav_a selected">Music</a></li>
 						<li><a href="../index.html" class="nav_a icon">NiZ<span>&</span>YoYo</a></li>
 					</ul>
 				</div>
